--- a/plateSale/index.html
+++ b/plateSale/index.html
@@ -10,7 +10,14 @@
     <title>
       &#x9655;&#x897F;&#x7535;&#x52A8;&#x81EA;&#x884C;&#x8F66;&#x7BA1;&#x7406;&#x540E;&#x53F0;
     </title>
-    <link rel="stylesheet" href="/plateSale/umi.3efb9bfd.css" />
+    <style>
+      body,
+      html,
+      #root {
+        height: 100%;
+      }
+    </style>
+    <link rel="stylesheet" href="/plateSale/umi.9a58910f.css" />
     <script>
       window.routerBase = "/";
     </script>
@@ -18,7 +25,7 @@
       window.publicPath = "/plateSale/";
     </script>
     <script>
-      //! umi version: 3.2.7
+      //! umi version: 3.0.14
     </script>
   </head>
   <body>
@@ -212,6 +219,6 @@
       </div>
     </div>
 
-    <script src="/plateSale/umi.b50333b5.js"></script>
+    <script src="/plateSale/umi.2136b436.js"></script>
   </body>
 </html>
