--- a/plateSale/index.html
+++ b/plateSale/index.html
@@ -7,17 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>
-      &#x9655;&#x897F;&#x7535;&#x52A8;&#x81EA;&#x884C;&#x8F66;&#x7BA1;&#x7406;&#x540E;&#x53F0;
-    </title>
-    <style>
-      body,
-      html,
-      #root {
-        height: 100%;
-      }
-    </style>
-    <link rel="stylesheet" href="/plateSale/umi.ba2e3a29.css" />
+    <title>陕西电动自行车管理后台</title>
+    <link rel="stylesheet" href="/plateSale/umi.b6c7f821.css" />
     <script>
       window.routerBase = "/";
     </script>
@@ -25,7 +16,7 @@
       window.publicPath = "/plateSale/";
     </script>
     <script>
-      //! umi version: 3.0.14
+      //! umi version: 3.2.19
     </script>
   </head>
   <body>
@@ -214,11 +205,11 @@
             width="32"
             style="margin-right: 8px;"
           /> -->
-          &#x9655;&#x897F;&#x7535;&#x52A8;&#x81EA;&#x884C;&#x8F66;&#x7BA1;&#x7406;&#x540E;&#x53F0;
+          陕西电动自行车管理后台
         </div>
       </div>
     </div>
 
-    <script src="/plateSale/umi.c711c551.js"></script>
+    <script src="/plateSale/umi.bac5964c.js"></script>
   </body>
 </html>
