--- a/plateSale/index.html
+++ b/plateSale/index.html
@@ -8,12 +8,12 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
     <title>陕西电动自行车管理后台</title>
-    <link rel="stylesheet" href="/plateSale/umi.b6c7f821.css" />
+    <link rel="stylesheet" href="./umi.3b29c390.css" />
     <script>
       window.routerBase = "/";
     </script>
     <script>
-      window.publicPath = "/plateSale/";
+      window.publicPath = "./";
     </script>
     <script>
       //! umi version: 3.2.19
@@ -210,6 +210,6 @@
       </div>
     </div>
 
-    <script src="/plateSale/umi.bac5964c.js"></script>
+    <script src="./umi.d5745f18.js"></script>
   </body>
 </html>
