--- a/plateSale/index.html
+++ b/plateSale/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
     <title>陕西电动自行车管理后台</title>
-    <link rel="stylesheet" href="./umi.3b29c390.css" />
+    <link rel="stylesheet" href="./umi.cc61b6a7.css" />
     <script>
       window.routerBase = "/";
     </script>
@@ -16,7 +16,7 @@
       window.publicPath = "./";
     </script>
     <script>
-      //! umi version: 3.2.19
+      //! umi version: 3.2.20
     </script>
   </head>
   <body>
@@ -198,7 +198,7 @@
           </div>
         </div>
         <div
-          style="display: flex; justify-content: center; align-items: center;"
+          style="display: flex; justify-content: center; align-items: center"
         >
           <!-- <img
             src="https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg"
@@ -210,6 +210,6 @@
       </div>
     </div>
 
-    <script src="./umi.0d547290.js"></script>
+    <script src="./umi.f02d067b.js"></script>
   </body>
 </html>
